GUI prototype half working now.   backend looks very good except for images from some sites are bogus

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -58,7 +58,7 @@
   />
   
   <!-- Preload Critical Resources -->
-  <link rel="preload" href="/src/main.tsx" as="script" />
+  <link rel="modulepreload" href="/src/main.tsx" />
   
   <!-- Performance and Security -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
